--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,6 +173,10 @@ input, select, textarea {
 			font-weight: 700;
 		}
 
+		.title-blue {
+			color: #43B3E0;
+		}
+
 	h2 {
 		font-size: 2em;
 		letter-spacing: -0.015em;
